# substring-lib

./: .clang-format  .clang-tidy  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: cmake-single-platform.yml
docs/: Algo-description.docx  Algo-description.md  acceptance_plan.md  algo_description.md  architecture.md  expand_plan.md  report.md  requirements_and_test_plan.md
docs/benchmark_results/: boyer_moore.json  kmp.json  rabin_karp.json  result_easy_macos.txt  result_macos.txt  results_easy_1.txt  results_easy_ubuntu.txt  results_easy_windows.txt  results_google_1.txt  results_google_2.txt  results_google_ubuntu.txt  results_google_windows.txt  suffix_array.json  z_algorithm.json
docs/requirements_analysis/: requiements_analyses.md  requirements_analysis.md
experimental/: CMakeLists.txt  benchmark.cpp
experimental/algorithms/: benchmark_boyer_moore.cpp  benchmark_kmp.cpp  benchmark_rabin_karp.cpp  benchmark_suffix_array.cpp  benchmark_utils.h  benchmark_z_algorithm.cpp
experimental/configs/: config.json
experimental/include/: benchmark_manager.h  benchmark_utils.h  config_loader.h  experimental_base.h  experimental_easy.h  experimental_google_benchmark.h
include/: README.md  substring_lib.h
include/algorithms/: kmp.h  rabin_karp.h  suffix_array.h  z_algorithm.h
lib/: CMakeLists.txt
lib/include/: README.md  substring_lib.h
lib/include/algorithms/: aho_corasick.h  boyer_moore.h  kmp.h  max_common_substring.h  not_so_naive.h  rabin_karp.h  suffix_array.h  z_algorithm.h
lib/src/: substring_lib.cpp
lib/src/algorithms/: aho_corasick.cpp  boyer_moore.cpp  kmp.cpp  max_common_substring.cpp  not_so_naive.cpp  rabin_karp.cpp  suffix_array.cpp  z_algorithm.cpp
lib/test/algorithms/: integration_tests.cpp  test_aho_corasick.cpp  test_boyer_moore.cpp  test_kmp.cpp  test_max_common_substring.cpp  test_not_so_naive.cpp  test_rabin_karp.cpp  test_suffix_array.cpp  test_z_algorithm.cpp
src/: substring_lib.cpp
src/algorithms/: boyer-moore.cpp  boyer_moore.cpp  kmp.cpp  rabin_karp.cpp  suffix_array.cpp  z_algorithm.cpp
test/algorithms/: test_boyer_moore.cpp  test_kmp.cpp  test_rabin_karp.cpp  test_suffix_array.cpp  test_z_algorithm.cpp
test/experimental/: benchmark.cpp
